--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hello</title>
   </head>
   <body>
-    <h1>Hello together!</h1>
+    <h1>Hello together! Just a new test!</h1>
   </body>
 </html>
